@@ -1,3 +1,10 @@
+Sun Dec 22 11:05:53 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/install_command.rb:  Restore gem install
+	  --ignore-dependencies for remote gems
+	* test/rubygems/test_gem_commands_install_command.rb:  Test for the
+	  above.
+
 Sun Dec 22 10:23:40 2013  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rdoc.rb:  Set RDoc to release version.
